# wezterm

./: Cargo.toml  run-glyph-demo.sh
config/src/: config.rs  terminal.rs
docs/: glyph-protocol.md
docs/config/lua/config/: enable_glyph_protocol.md
docs/config/lua/window-events/: pane-focus-changed.md
mux/: Cargo.toml
mux/src/: localpane.rs  pane.rs
term/: Cargo.toml
term/src/: config.rs
term/src/terminalstate/: glyph.rs  mod.rs  performer.rs
term/src/test/: mod.rs
wezterm-escape-parser/src/: lib.rs
wezterm-escape-parser/src/parser/: mod.rs
wezterm-glyph-protocol/: Cargo.toml
wezterm-glyph-protocol/examples/: gen_test_glyphs.rs
wezterm-glyph-protocol/src/: colr.rs  glyf.rs  lib.rs  parse.rs  place.rs  raster.rs  sizing.rs
wezterm-gui/: Cargo.toml
wezterm-gui/src/: glyphcache.rs  shapecache.rs  tabbar.rs
wezterm-gui/src/termwindow/: mod.rs
wezterm-gui/src/termwindow/render/: mod.rs  pane.rs  screen_line.rs  tab_bar.rs
